@@ -1,3 +1,5 @@
+* 11/06/2012   (**Normal    )   + and - for Numbers with x or z generate asserion failures as not supported yet.
+* 11/06/2012   (**Normal    )   The != operator for netlist::Number generates wrong results when x or z exists. eg: "x1" != "0" results false.
 * 09/06/2012   (**Important )   The multi-driver check is far complicated than I thought. The ranges/selectors should be considered into the check.
 * 08/06/2012   (**Important )   Check all variables are properly expunged when not in use.
 * 08/06/2012   (**Normal    )   May be there is no need to differentiate the types in ParaConn as they all go back to Netlist::Expression.
