@@ -442,8 +442,8 @@ bool netlist::VIdentifier::elaborate(const ctype_t mctype, const vector<NetComp 
   case tExp: {
     // for an expression, no range is used
     assert(m_range.size() == 0);
-    for_each(m_select.begin(), m_select.end(), [&rv](shared_ptr<Range>& m) {
-        rv &= m->elaborate();
+    for_each(m_select.begin(), m_select.end(), [&rv, &mctype, &fp](shared_ptr<Range>& m) {
+        rv &= m->elaborate(mctype, fp);
         rv &= m->is_valuable();
       });    
     if(!rv) {
@@ -464,6 +464,18 @@ bool netlist::VIdentifier::elaborate(const ctype_t mctype, const vector<NetComp 
     }
     break;
   }
+  case tLConcatenation: {
+    // for a left-side concatenation, select should be resolved numbers
+    assert(m_range.size() == 0);
+    for_each(m_select.begin(), m_select.end(), [&rv](shared_ptr<Range>& m) {
+        rv &= m->elaborate();
+        rv &= m->is_valuable();
+      });
+    if(!rv) {
+      G_ENV->error(loc, "ELAB-RANGE-0", name);
+    }
+    break;
+  }    
   default:
     assert(0 == "this type of component has not been processed here!");
     rv=false;
