@@ -86,6 +86,8 @@ namespace netlist {
   Number operator+ (const Number& lhs, const Number& rhs);
   Number operator- (const Number& lhs, const Number& rhs);
   bool operator== (const Number& lhs, const Number& rhs);
+  bool operator!= (const Number& lhs, const Number& rhs);
+  bool case_equal (const Number& lhs, const Number& rhs);
   Number operator<< (const Number& lhs, int rhs);
   NETLIST_STREAMOUT(Number)
 
