@@ -1,3 +1,8 @@
+##### Mon 11/06/2012
+* Add elaborate() in netlist::SeqBlock, netlist::IfState, netlist::Block, netlist::Assign.
+* Add ==, != and leading zero triming support for netlist::Number.
+* Add a get_type_name() member function in Netlist::NetComp to show component type in string.
+
 ##### Sun 10/06/2012
 * Fix the on-load error. The problem is fake and it should not stop the elaboration from proceeding further.
 
